--- a/Speart/src/vista/paneles/usuario/DialogCambiaClave.form
+++ b/Speart/src/vista/paneles/usuario/DialogCambiaClave.form
@@ -58,7 +58,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnCambiar">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/vista/imagenes/kword.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Cambiar"/>
+        <Property name="toolTipText" type="java.lang.String" value="Actualizar clave"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCambiarActionPerformed"/>
