--- a/Speart/src/vista/paneles/evaluacion/PnlEvaluacion.form
+++ b/Speart/src/vista/paneles/evaluacion/PnlEvaluacion.form
@@ -1342,7 +1342,7 @@
                         </DimensionLayout>
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <EmptySpace min="0" pref="454" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="450" max="32767" attributes="0"/>
                           </Group>
                         </DimensionLayout>
                       </Layout>
@@ -1378,7 +1378,7 @@
                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="btnSiguiente" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                               <Component id="btnAnterior" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
-                              <Component id="btnResultados" alignment="3" pref="37" max="32767" attributes="0"/>
+                              <Component id="btnResultados" alignment="3" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -1386,16 +1386,25 @@
                   <SubComponents>
                     <Component class="javax.swing.JButton" name="btnSiguiente">
                       <Properties>
+                        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                          <Image iconType="3" name="/vista/imagenes/agt_forward.png"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Siguiente"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnAnterior">
                       <Properties>
+                        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                          <Image iconType="3" name="/vista/imagenes/agt_back.png"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Anterior"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnResultados">
                       <Properties>
+                        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                          <Image iconType="3" name="/vista/imagenes/business.png"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Resultados"/>
                       </Properties>
                     </Component>
