--- a/Speart/src/vista/paneles/respaldos/PnlRespaldos.form
+++ b/Speart/src/vista/paneles/respaldos/PnlRespaldos.form
@@ -104,20 +104,28 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnBuscaGenerac">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/BUSC.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Buscar"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Buscar  direccion a donde se guardara respaldo"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscaGeneracActionPerformed"/>
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="370" y="180" width="90" height="30"/>
+                      <AbsoluteConstraints x="370" y="180" width="100" height="30"/>
                     </Constraint>
                   </Constraints>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnGenerarResp">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/Save.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="GENERAR"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Guardar respaldo"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGenerarRespActionPerformed"/>
@@ -207,14 +215,18 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnBuscarCarg">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/BUSC.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Buscar"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Abrir respaldo a recuperar"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarCargActionPerformed"/>
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="370" y="180" width="90" height="30"/>
+                      <AbsoluteConstraints x="370" y="180" width="100" height="30"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -227,7 +239,11 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnCargarResp">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/abrirbarra.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="CARGAR"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Cargar respaldo guardado"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargarRespActionPerformed"/>
