--- a/Speart/src/vista/paneles/usuario/DialogQuejas.form
+++ b/Speart/src/vista/paneles/usuario/DialogQuejas.form
@@ -142,6 +142,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnGuardarQueja">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/vista/imagenes/Save.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
       <Events>
@@ -149,7 +152,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="260" y="290" width="100" height="40"/>
+          <AbsoluteConstraints x="260" y="290" width="110" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
